feat: 유저 프로필용 그룹 채팅방 목록 무한 스크롤로 API 변경